Revised notebook and  improved comments

--- a/SupervisedModels.ipynb
+++ b/SupervisedModels.ipynb
@@ -4,13 +4,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Supervised Learning for Product Recommendation in Glowlytic\n",
+    "\n",
+    "In this project, we aim to develop a **supervised learning-based recommendation system** that suggests the best product type based on user attributes, such as **skin type, product brand, and notable effects.** The goal is to improve personalized recommendations by leveraging machine learning techniques.\n",
+    "\n",
+    "### Why Supervised Learning?\n",
+    "Supervised learning is a machine learning approach where a model learns from labeled data. Given an input (e.g., user attributes), the model predicts an output (e.g., product category). We experimented with **two supervised learning models**:\n",
+    "\n",
+    "- **Support Vector Machine (SVM)** – A powerful classification algorithm that finds the optimal decision boundary.\n",
+    "- **CatBoost Classifier** – A gradient boosting algorithm optimized for categorical data.\n",
+    "\n",
+    "Each model is evaluated based on **accuracy, precision, recall, and F1-score.**  \n",
+    "The following sections provide an in-depth analysis of these models, starting with **Support Vector Machine (SVM).**\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 1-Support Vector Machine (SVM)\n",
     "\n",
-    "Support Vector Machine (SVM) is one of the most notable supervised machine learning algorithms, it was designed to classify data by finding the most ideal boundary between different attributes. Unlike some other models that might get distracted by noise or additional details, SVM focuses on the most important data points which are the ones that are closest to the boundary to ensure that the systems decisions are made in a clear and precise way. By maximizing the margin between categories, SVM improves accuracy and make classification task reliable.\n",
+    "Support Vector Machine (SVM) is one of the most notable supervised machine learning algorithms, it was designed to classify data by finding the most ideal boundary between different attributes. Unlike some other models that might get distracted by noise or additional details, SVM focuses on the most important data points which are the ones that are closest to the boundary to ensure that the systems decisions are made in a clear and precise way. By maximizing the margin between categories, SVM improves accuracy and make classification task reliable [1].\n",
     "\n",
     "### Justification\n",
     "\n",
-    "We chose to implement SVM because of the following reasons: \n",
+    "We chose to implement SVM because of the following reasons [2]: \n",
     "\n",
     "1.\tThe Glowlytic recommendation system takes into consideration multiple attributes, including skin type, product type, brand, and notable effects. Also, SVM’s ability to work well in high-dimensional spaces makes sure that all these factors are taken into account for accurate recommendations.\n",
     "\n",
@@ -74,13 +94,16 @@
     "file_path = \"Dataset/processed_file.csv\"\n",
     "df = pd.read_csv(file_path)\n",
     "\n",
-    "# Selecting features to train the model with: \n",
+    "# ============================================\n",
+    "# FEATURE ENGINEERING & PREPROCESSING\n",
     "\n",
-    "#'brand' column isn't encoded so it will be encoded here\n",
+    "# Encoding categorical features:\n",
+    "# The 'brand' column is categorical, so we apply one-hot encoding to convert it into numerical format.\n",
     "X = df[['brand']].copy()\n",
     "X = pd.get_dummies(X, columns=['brand'])\n",
     "\n",
-    "# Adding binary encoded columns for notable effects and skin type\n",
+    "# Adding binary-encoded columns for notable effects and skin type:\n",
+    "# These are categorical variables already stored in binary format (0 or 1), so we directly include them in X.\n",
     "notable_effects_columns = [col for col in df.columns if col.startswith('notable_effects_')]\n",
     "skin_type_columns = ['Sensitive', 'Combination', 'Oily', 'Dry', 'Normal']\n",
     "X[notable_effects_columns + skin_type_columns] = df[notable_effects_columns + skin_type_columns]\n",
@@ -89,21 +112,34 @@
     "scaler = MinMaxScaler()\n",
     "X_scaled = scaler.fit_transform(X)\n",
     "\n",
-    "# Extracting product type labels\n",
+    "# Extracting target variable (product type labels):\n",
+    "# The 'product_type' column is stored in one-hot encoded format. We convert it back to single labels.\n",
     "product_type_columns = [col for col in df.columns if col.startswith('product_type_')]\n",
     "y = df[product_type_columns].values.argmax(axis=1)  # Convert one-hot encoding to single labels\n",
     "\n",
-    "# Splitting dataset into training and testing sets\n",
+    "# ============================================\n",
+    "# SPLITTING DATA INTO TRAINING & TESTING SETS\n",
+    "\n",
+    "# We split the dataset into 80% training and 20% testing.\n",
     "X_train, X_test, y_train, y_test = train_test_split(X_scaled, y, test_size=0.2, random_state=42)\n",
     "\n",
-    "# Training SVM Classifier\n",
+    "# ============================================\n",
+    "# TRAINING SUPPORT VECTOR MACHINE (SVM)\n",
+    "# Initializing the SVM classifier\n",
     "svm_classifier = SVC(kernel='rbf', C=1.0, gamma='scale', random_state=42)\n",
+    "\n",
+    "# Training the SVM model on the training data\n",
     "svm_classifier.fit(X_train, y_train)\n",
     "\n",
+    "# ============================================\n",
     "# Making predictions\n",
+    "# Predicting product type on the test set\n",
     "y_pred = svm_classifier.predict(X_test)\n",
     "\n",
-    "# Evaluating the model\n",
+    "# ============================================\n",
+    "# EVALUATION\n",
+    "\n",
+    "# Computing evaluation metrics\n",
     "accuracy = accuracy_score(y_test, y_pred)\n",
     "precision, recall, f1, _ = precision_recall_fscore_support(y_test, y_pred, average='weighted')\n",
     "\n",
@@ -112,10 +148,15 @@
     "print(f'Precision: {precision:.2f}')\n",
     "print(f'Recall: {recall:.2f}')\n",
     "print(f'F1-score: {f1:.2f}')\n",
+    "\n",
+    "# Printing a detailed classification report\n",
     "print(\"\\nClassification Report:\")\n",
     "print(classification_report(y_test, y_pred))\n",
     "\n",
-    "# Confusion matrix visualization\n",
+    "# ============================================\n",
+    "# CONFUSION MATRIX VISUALIZATION\n",
+    "\n",
+    "# Creating a confusion matrix to visualize model performance\n",
     "cm = confusion_matrix(y_test, y_pred)\n",
     "plt.figure(figsize=(8, 6))\n",
     "sns.heatmap(cm, annot=True, fmt='d', cmap='Blues', xticklabels=set(y), yticklabels=set(y))\n",
@@ -131,10 +172,10 @@
    "source": [
     "## 2-CatBoost Classifier\n",
     "\n",
-    "CatBoost (Categorical Boosting) is a high performance gradient boosting algorithm developed by Yandex. It is designed to handle categorical features efficiently without requiring extensive preprocessing, making it ideal for classification tasks with structured data. Unlike traditional gradient boosting models, CatBoost utilizes an advanced technique called ordered boosting to prevent overfitting and enhance generalization, making it a powerful choice for recommendation systems.\n",
+    "CatBoost (Categorical Boosting) is a high performance gradient boosting algorithm developed by Yandex. It is designed to handle categorical features efficiently without requiring extensive preprocessing, making it ideal for classification tasks with structured data. Unlike traditional gradient boosting models, CatBoost utilizes an advanced technique called ordered boosting to prevent overfitting and enhance generalization, making it a powerful choice for recommendation systems [3].\n",
     "\n",
     "### Justification\n",
-    "We chose to implement CatBoost for the following reasons:\n",
+    "We chose to implement CatBoost for the following reasons [4]:\n",
     "\n",
     "1. Optimized Handling of Categorical Data\n",
     "The Glowlytic recommendation system relies heavily on categorical attributes such as brand, product type, skin type, and notable effects. CatBoost natively supports categorical features without requiring extensive preprocessing like one-hot encoding, preserving data structure and improving efficiency.\n",
@@ -207,13 +248,16 @@
     "file_path = \"Dataset/processed_file.csv\"\n",
     "df = pd.read_csv(file_path)\n",
     "\n",
-    "# Selecting features to train the model with: \n",
+    "# ============================================\n",
+    "# FEATURE ENGINEERING & PREPROCESSING \n",
     "\n",
-    "#'brand' column isn't encoded so it will be encoded here\n",
+    "# Encoding categorical features: \n",
+    "# The 'brand' column is categorical, so we apply one-hot encoding to convert it into numerical format.\n",
     "X = df[['brand']].copy()\n",
     "X = pd.get_dummies(X, columns=['brand'])\n",
     "\n",
-    "# Adding binary encoded columns for notable effects and skin type\n",
+    "# Adding binary-encoded columns for skin type and notable effects\n",
+    "# These features are already represented as binary (0 or 1), so we directly include them in X.\n",
     "notable_effects_columns = [col for col in df.columns if col.startswith('notable_effects_')]\n",
     "skin_type_columns = ['Sensitive', 'Combination', 'Oily', 'Dry', 'Normal']\n",
     "X[notable_effects_columns + skin_type_columns] = df[notable_effects_columns + skin_type_columns]\n",
@@ -222,31 +266,43 @@
     "scaler = MinMaxScaler()\n",
     "X_scaled = scaler.fit_transform(X)\n",
     "\n",
-    "# Encoding product_type\n",
+    "# Encoding the target variable:\n",
+    "# 'product_type' is categorical, so we convert it into numerical labels using Label Encoding.\n",
     "y = LabelEncoder().fit_transform(df['product_type'].astype(str))\n",
     "\n",
-    "# Splitting dataset into training and testing sets\n",
+    "# ============================================\n",
+    "# TRAINING & TESTING SPLIT\n",
+    "\n",
+    "# Splitting the dataset into training (80%) and testing (20%) subsets\n",
     "X_train, X_test, y_train, y_test = train_test_split(X_scaled, y, test_size=0.2, random_state=42)\n",
     "\n",
-    "# Training CatBoost Classifier\n",
+    "# ============================================\n",
+    "# TRAINING CATBOOST CLASSIFIER\n",
+    "\n",
+    "# Initializing CatBoost Classifier with tuned hyperparameters:\n",
     "catboost_classifier = CatBoostClassifier(\n",
     "    iterations=2000,  # Increase iterations for better learning\n",
-    "    depth=8,  # Try deeper trees\n",
+    "    depth=8,  # Controls the complexity of the trees\n",
     "    learning_rate=0.05,  # Lower learning rate with more iterations\n",
     "    l2_leaf_reg=3,  # Regularization to prevent overfitting\n",
     "    loss_function='MultiClass',\n",
-    "    random_seed=42,\n",
+    "    random_seed=42, # Ensures consistent results across runs\n",
     "    eval_metric=\"Accuracy\",\n",
     "    verbose=0\n",
     ")\n",
     "\n",
+    "# Training the model using training data\n",
     "catboost_classifier.fit(X_train, y_train, eval_set=(X_test, y_test), early_stopping_rounds=50, use_best_model=True)\n",
     "\n",
+    "# ============================================\n",
     "# Making predictions\n",
+    "# Predicting product type on the test set\n",
     "y_pred = catboost_classifier.predict(X_test)\n",
     "\n",
+    "# ============================================\n",
+    "# EVALUATION\n",
     "\n",
-    "# Evaluating the model\n",
+    "# Computing evaluation metrics\n",
     "accuracy = accuracy_score(y_test, y_pred)\n",
     "precision, recall, f1, _ = precision_recall_fscore_support(y_test, y_pred, average='weighted')\n",
     "\n",
@@ -255,10 +311,15 @@
     "print(f'Precision: {precision:.2f}')\n",
     "print(f'Recall: {recall:.2f}')\n",
     "print(f'F1-score: {f1:.2f}\\n')\n",
+    "\n",
+    "# Detailed classification report\n",
     "print(\"Classification Report:\")\n",
     "print(classification_report(y_test, y_pred))\n",
     "\n",
-    "# Confusion matrix visualization\n",
+    "# ============================================\n",
+    "# CONFUSION MATRIX VISUALIZATION\n",
+    "\n",
+    "# Creating a confusion matrix to visualize model performance\n",
     "cm = confusion_matrix(y_test, y_pred)\n",
     "plt.figure(figsize=(8, 6))\n",
     "sns.heatmap(cm, annot=True, fmt='d', cmap='Blues', xticklabels=set(y), yticklabels=set(y))\n",
@@ -308,14 +369,29 @@
     "    \n",
     "##  Which Model Performed Best?  \n",
     "\n",
-    "After comparing **CatBoost** and **SVM**, we **chose CatBoost** as the better model because:  \n",
+    "After comparing **CatBoost** and **SVM**, we **chose CatBoost** as the better performing model.  \n",
     "\n",
-    "### ✅ **Why CatBoost Wins?**  \n",
-    "✔ **Higher accuracy** – CatBoost achieved **61%**, slightly outperforming SVM (60%).  \n",
-    "✔ **Better recall** – It identified more correct cases in most classes, making it more reliable.  \n",
-    "✔ **Handles categorical data efficiently** – CatBoost processes categorical variables **natively**, unlike SVM, which requires extra encoding.  \n",
-    "✔ **Prevents overfitting** – Built-in **early stopping** ensures it stops training when performance stops improving.  \n",
+    "###  **Why CatBoost Wins?**  \n",
+    "- **Higher accuracy** – CatBoost achieved **61%**, slightly outperforming SVM (60%).  \n",
+    "- **Better recall** – It identified more correct cases in most classes, making it more reliable.  \n",
+    "- **Handles categorical data efficiently** – CatBoost processes categorical variables **natively**, unlike SVM, which requires extra encoding.  \n",
+    "- **Prevents overfitting** – Built-in **early stopping** ensures it stops training when performance stops improving.  \n",
     "  \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## References  \n",
+    "[1] GeeksforGeeks, “Support Vector Machine Algorithm,” GeeksforGeeks, [Online]. Available: https://www.geeksforgeeks.org/support-vector-machine-algorithm/.\n",
+    "\n",
+    "[2] TechTarget, “Support Vector Machine (SVM),” TechTarget, [Online]. Available: https://www.techtarget.com/whatis/definition/support-vector-machine-SVM. \n",
+    "\n",
+    "[3] Yandex, “CatBoost: Yandex’s machine learning algorithm,” Yandex, [Online]. Available: https://catboost.ai/.\n",
+    "\n",
+    "[4] A. Kolli, “Understanding CatBoost: The gradient boosting algorithm for categorical data,” Medium, [Online]. Available: https://aravindkolli.medium.com/understanding-catboost-the-gradient-boosting-algorithm-for-categorical-data-73ddb200895d.\n",
+    "\n"
    ]
   }
  ],
