--- a/AI/chatGpt.ipynb
+++ b/AI/chatGpt.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,9 @@
     "import pandas as pd\n",
     "import openai\n",
     "\n",
-    "openai.api_key = os.getenv(\"OPENAI_API_KEY\")\n"
+    "openai.api_key = os.getenv(\"OPENAI_API_KEY\")\n",
+    "\n",
+    "\n"
    ]
   }
  ],
