--- a/GptApi.ipynb
+++ b/GptApi.ipynb
@@ -22,7 +22,15 @@
     "### Effectiveness of Prompts\n",
     "The sentences or questions that you enter into a **Generative AI** tool, also known as prompts, greatly affect the quality of outputs you receive. After you enter a prompt, the model analyzes the input and generates a response based on the patterns it has learned through its training. Descriptive prompts can enhance the quality of the outputs. [3]\n",
     "\n",
-    "By experimenting with two different prompt templates, we explore how variations in prompt detail influence the quality and specificity of AI-generated recommendations. This allows us to compare and justify the effectiveness of each template in delivering clear, useful, and user-centered skincare suggestions. [4]\n"
+    "By experimenting with two different prompt templates, we explore how variations in prompt detail influence the quality and specificity of AI-generated recommendations. This allows us to compare and justify the effectiveness of each template in delivering clear, useful, and user-centered skincare suggestions.\n",
+    "\n",
+    "**Prompt 1:** \"You are a beauty advisor. Based on the user's skin type: {skin_type}, and desired effect: {notable_effect}, \n",
+    "recommend a product type and explain why.\"\n",
+    "\n",
+    "**Prompt 2:** \"You are an expert skincare consultant. A user has a {skin_type} skin type and is looking for products with \n",
+    "the following effect: {notable_effect}. Consider the price range around {price}, and explain in detail which \n",
+    "product type you would recommend from the following options: {product_options}. Also explain how the product \n",
+    "helps and why it suits the user's needs.\""
    ]
   },
   {
@@ -109,6 +117,29 @@
     "# Display results\n",
     "print(\"=== Template 1 Response ===\\n\", response_1)\n",
     "print(\"\\n=== Template 2 Response ===\\n\", response_2)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Prompt Comparison\n",
+    "\n",
+    "\n",
+    "### Chosen Prompt and Justification"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### References\n",
+    "\n",
+    "**[1]** IBM, \"What is Generative AI?,\" IBM Think, [Online]. Available: https://www.ibm.com/think/topics/generative-ai. \n",
+    "\n",
+    "**[2]** Lighthouse Guild, \"What is ChatGPT?,\" [Online]. Available: https://lighthouseguild.org/what-is-chat-gpt/.\n",
+    "\n",
+    "**[3]** Harvard University Information Technology, \"Writing Better Prompts for AI Tools,\" Harvard University IT, [Online]. Available: https://www.huit.harvard.edu/news/ai-prompts.\n"
    ]
   }
  ],
