model is fixed,

--- a/Generative AI/GptApi.ipynb
+++ b/Generative AI/GptApi.ipynb
@@ -117,20 +117,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "✅ Model Feature Names:\n",
+      "[\"brand_A'PIEU\", 'brand_ACWELL', 'brand_AHC', 'brand_AIZEN', 'brand_ANESSA', 'brand_ARGAVELL', 'brand_ARIUL', 'brand_AVOSKIN', 'brand_AZARINE', 'brand_BANANA BOAT', 'brand_BANILA CO', 'brand_BE THE SKIN', 'brand_BENTON', 'brand_BHUMI', 'brand_BIO BEAUTY LAB', 'brand_BIO ESSENCE', 'brand_BIODERMA', 'brand_BIORE', 'brand_BIYU', 'brand_BLOOMKA', 'brand_BLP BEAUTY', 'brand_BREYLEE', 'brand_BY ECOM', 'brand_CARASUN', 'brand_CETAPHIL', 'brand_CHARIS', 'brand_CLINIQUE', 'brand_COSRX', 'brand_DEAR ME BEAUTY', 'brand_DERMALUZ', 'brand_DEW IT', 'brand_DR JART', 'brand_ELSHE SKIN', 'brand_ELVICTO', 'brand_EMINA', 'brand_ERHA', 'brand_ESSEN HERB', 'brand_ESTEE LAUDER', 'brand_ETUDE', 'brand_EUCALIE', 'brand_EVERPURE', 'brand_EVERSHINE', 'brand_EVERWHITE', 'brand_FIRST LAB', 'brand_FOR SKINS SAKE', 'brand_FRUDIA', 'brand_GARNIER', 'brand_GENTLE HOUR', 'brand_GLAMGLOW', 'brand_GLOWINC POTION', 'brand_HADA LABO', 'brand_HALE', 'brand_HANASUI', 'brand_HAPLE', 'brand_HARLETTE', 'brand_HATOMUGI', 'brand_HAUM', 'brand_HEIMISH', 'brand_HERBORIST', 'brand_HIMALAYA', 'brand_HOLIKA HOLIKA', 'brand_HUMPHREY', 'brand_HUXLEY', 'brand_I TRUST NATURE', \"brand_I'M FROM\", 'brand_INDOGANIC', 'brand_INNERTRUE', 'brand_INNISFREE', 'brand_IUNIK', 'brand_JARKEEN', 'brand_JARTE BEAUTY', 'brand_JELLYS', 'brand_JOYLAB', 'brand_KALEY SKINCARE', 'brand_KEANA NADESHIKO', \"brand_KIEHL'S\", 'brand_KINDY GLOW', 'brand_KLAIRS', 'brand_KLAVUU', 'brand_KLEVERU', 'brand_KOSE SEKKISEI', \"brand_L'ESSENTIAL\", \"brand_L'OCCITANE\", 'brand_LACOCO', 'brand_LAGOM', 'brand_LANEIGE', 'brand_LOREAL PARIS', 'brand_MACARIA', 'brand_MAD FOR MAKEUP', 'brand_MADAME GIE', 'brand_MAKE OVER', 'brand_MAKE P:REM', 'brand_MAMONDE', 'brand_MEDIHEAL', 'brand_MINERAL BOTANICA', 'brand_MISSHA', 'brand_MOMOPURI', \"brand_N'PURE\", 'brand_NACIFIC', 'brand_NAMA BEAUTY', 'brand_NARUKO', 'brand_NATUR', 'brand_NATURE REPUBLIC', 'brand_NAUFA', 'brand_NEOGEN', 'brand_NIVEA', 'brand_NOOLA', 'brand_NOVEXPERT', 'brand_NUTRISHE', 'brand_OLAY', 'brand_OMNISKIN', 'brand_PIXY', \"brand_POND'S\", 'brand_PURITO', 'brand_PURIVERA BOTANICALS', 'brand_PYUNKANG YUL', 'brand_QUESELLA', 'brand_RAIKU', 'brand_RAYOU', 'brand_ROSE ALL DAY', 'brand_ROUND LAB', 'brand_SAFI', 'brand_SATURDAY LOOKS', 'brand_SCARLETT', 'brand_SECRET KEY', 'brand_SENKA', 'brand_SENSATIA BOTANICALS', 'brand_SHISEIDO', 'brand_SIMPLISTIC', 'brand_SK-II', 'brand_SKEYNDOR', 'brand_SKEYNODR', 'brand_SKIN AQUA', 'brand_SKIN DEWI', 'brand_SKIN GAME', 'brand_SKIN THEORY', 'brand_SKINMEE', 'brand_SNP PREP', 'brand_SOME BY MI', 'brand_SOMETHINC', 'brand_SPASCRIPTIONS', 'brand_STUDIO TROPIK', 'brand_SUKIN', 'brand_SULWHASOO', 'brand_TERRA BEAUTE', 'brand_THAYERS', 'brand_THE AUBREE', 'brand_THE BATH BOX', 'brand_THE BODY SHOP', 'brand_THE FACE SHOP', 'brand_TISHA', 'brand_TRILOGY', 'brand_TRUE TO SKIN', 'brand_TULUS', 'brand_VOTRE PEAU', 'brand_VT COSMETICS', 'brand_WARDAH', 'brand_WESTCARE', 'brand_WHITELAB', 'brand_YOU', 'notable_effects_acne-free', 'notable_effects_acne-spot', 'notable_effects_anti-aging', 'notable_effects_balancing', 'notable_effects_black-spot', 'notable_effects_brightening', 'notable_effects_hydrating', 'notable_effects_moisturizing', 'notable_effects_no-whitecast', 'notable_effects_oil-control', 'notable_effects_pore-care', 'notable_effects_refreshing', 'notable_effects_skin-barrier', 'notable_effects_soothing', 'notable_effects_uv-protection', 'Sensitive', 'Combination', 'Oily', 'Dry', 'Normal', 'Cluster', 'price_SAR']\n",
       "Fill in your details and click Submit:\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0056ba5b6090414293473c785ed57d16",
+       "model_id": "213fd94ae5014549a8c95b65cac1aec1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -144,7 +146,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2372b8a7de554be7bed16f752fb9a319",
+       "model_id": "52f7ba96c4da4232bde189cc5d5314e0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -158,7 +160,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e051278c1f86450b95df3b56f10e65c6",
+       "model_id": "66bf662c09fd43cb9a567fd58b28df53",
        "version_major": 2,
        "version_minor": 0
       },
@@ -172,7 +174,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "afd3fa25fbfe42b9a4225bcfe0464bae",
+       "model_id": "7a116fd5a06046cc809c9be641ee040d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -186,7 +188,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "20256a7341894cbc94a02aab0e171a04",
+       "model_id": "b21d6d313c6b4cbfb99170b9aefa4d49",
        "version_major": 2,
        "version_minor": 0
       },
@@ -200,7 +202,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4cea6e6cb2254d5e8df595b1df466dc6",
+       "model_id": "1b5b71d8234a4022b34ff88fbfee2f3b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -229,6 +231,10 @@
     "# === Load CatBoost model ===\n",
     "model = CatBoostClassifier()\n",
     "model.load_model(\"catboost_model.cbm\")  \n",
+    "\n",
+    "# ✅ Print feature names\n",
+    "print(\"✅ Model Feature Names:\")\n",
+    "print(model.feature_names_)\n",
     "\n",
     "# Load original dataframe to get product type labels\n",
     "original_df = pd.read_csv(\"../Dataset/processed_file.csv\")\n",
