--- a/Generative AI/GptApi.ipynb
+++ b/Generative AI/GptApi.ipynb
@@ -15,7 +15,7 @@
     "**Generative AI** is a type of **artificial intelligence** that can produce original content—such as text, images, audio, or code—based on user prompts. It uses deep learning models that mimic human cognitive processes to detect patterns in massive datasets and generate relevant outputs in response to natural language inputs. [1]\n",
     "\n",
     "### How can Generative AI enhance our system?\n",
-    "In this assignment, we integrate **Generative AI** into our skincare recommendation system using ChatGPT, a language model developed by OpenAI. [2]\n",
+    "In this assignment, we integrate **Generative AI** into our pre-existing supervised skincare recommendation system using ChatGPT, a language model developed by OpenAI. [2]\n",
     "\n",
     "ChatGPT (short for Chat Generative Pre-trained Transformer) processes user inputs like skin type and desired skincare effects to produce personalized product advice. This makes it a powerful tool for recommendation systems, where user-specific data can be interpreted in real time to generate tailored outputs without relying on fixed decision trees or manually curated product lists. By leveraging ChatGPT's natural language understanding capabilities, the system becomes more adaptive, scalable, and capable of engaging users in a conversational interface.\n",
     "\n",
