Comparison and justification

--- a/Generative AI/GptApi.ipynb
+++ b/Generative AI/GptApi.ipynb
@@ -24,13 +24,19 @@
     "\n",
     "By experimenting with two different prompt templates, we explore how variations in prompt detail influence the quality and specificity of AI-generated recommendations. This allows us to compare and justify the effectiveness of each template in delivering clear, useful, and user-centered skincare suggestions.\n",
     "\n",
-    "**Prompt 1:** \"You are a beauty advisor. Based on the user's skin type: {skin_type}, and desired effect: {notable_effect}, \n",
-    "recommend a product type and explain why.\"\n",
+    "**Prompt 1:** \"You are a skincare advisor. The user has {skin} skin, wants {effect} results,\n",
+    "        prefers {brand} brand, and has a budget around {price} SAR.\n",
+    "        The recommended product type is: {predicted_label}.\n",
+    "        Please explain why this product type fits their needs in a friendly, informative way.\"\n",
     "\n",
-    "**Prompt 2:** \"You are an expert skincare consultant. A user has a {skin_type} skin type and is looking for products with \n",
-    "the following effect: {notable_effect}. Consider the price range around {price}, and explain in detail which \n",
-    "product type you would recommend from the following options: {product_options}. Also explain how the product \n",
-    "helps and why it suits the user's needs.\""
+    "**Prompt 2:** \"As a skincare consultant, analyze the user's profile:\n",
+    "        - Skin Type: {skin}\n",
+    "        - Concern: {effect}\n",
+    "        - Preferred Brand: {brand}\n",
+    "        - Budget: {price} SAR\n",
+    "        - Predicted Product Type: {predicted_label}\n",
+    "        Provide an explanation of why this product type is recommended,\n",
+    "        and how it works for their specific concern and skin type.\""
    ]
   },
   {
@@ -341,7 +347,20 @@
     "### Prompt Comparison\n",
     "\n",
     "\n",
-    "### Chosen Prompt and Justification"
+    "| Criteria                        | **Prompt 1**                                                                 | **Prompt 2**                                                                 |\n",
+    "|--------------------------------|------------------------------------------------------------------------------|------------------------------------------------------------------------------|\n",
+    "| **Text of Prompt**             | You are a skincare advisor. The user has {skin} skin, wants {effect} results, prefers {brand} brand, and has a budget around {price} SAR. The recommended product type is: {predicted_label}. Please explain why this product type fits their needs in a friendly, informative way. | As a skincare consultant, analyze the user's profile: - Skin Type: {skin} - Concern: {effect} - Preferred Brand: {brand} - Budget: {price} SAR - Predicted Product Type: {predicted_label} Provide an explanation of why this product type is recommended, and how it works for their specific concern and skin type. |\n",
+    "| **Tone**                       | Friendly, conversational                                                    | Professional, analytical                                                    |\n",
+    "| **Clarity of Structure**       | Medium – natural flow                                                       | High – structured layout                                                    |\n",
+    "| **Level of Detail in Output**  | Medium – focuses on user-friendliness                                       | High – encourages deeper explanation                                        |\n",
+    "| **AI Guidance Strength**       | Medium – more open-ended, flexible tone                                     | High – structured prompts improve AI's consistency                          |\n",
+    "\n",
+    "### Chosen Prompt and Justification\n",
+    "\n",
+    "✅ Chosen Prompt: **Prompt 2**\n",
+    "\n",
+    "#### Justification:\n",
+    "Prompt 2 is selected because it provides a more **structured and professional** format, which ensures consistency in the AI's output. It breaks down the user's input into clear, analyzable attributes and prompts the AI to respond with specific attention to how the product type aligns with each factor. This improves the depth and relevance of recommendations, and enhances trust in the advisor's knowledge and accuracy. While Prompt 1 offers a friendlier tone, Prompt 2 achieves a stronger balance between informativeness and personalization, making it better suited for users seeking credible skincare guidance."
    ]
   },
   {
